k3s-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cc-frontend
  namespace: configcloud
  labels:
    app: cc-frontend
spec:
  selector:
    matchLabels:
      app: cc-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: cc-frontend
    spec:
      containers:
      - name: cc-frontend
        image: registry.gitlab.com/my-homelab-stuff/cc-frontend:dev
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: gitlab-registry-credentials
