k3s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  cc-frontend-svc
  namespace: configcloud
spec:
  selector:
    app:  cc-frontend
  type:  ClusterIP
  ports:
  - name:  http
    port:  3000
    targetPort: 3000
    protocol: TCP
