k3s-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cc-frontend-ingress
  namespace: configcloud
  annotations:
    spec.ingressClassName: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: dev.configcloud.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cc-frontend-svc
                port:
                  number: 3000
